k8s/jack/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: jack
spec:
  selector:
    app: jack-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
