k8s/jack/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: jack
spec:
  selector:
    app: jack-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
