k8s/jack/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: jack
spec:
  clusterIP: None
  selector:
    app: jack-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
