k8s/jack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jack
  namespace: jack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: jack-redirect-https@kubernetescrd,jack-processing-limits@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: jack.keykomi.com
      http:
        paths:
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - jack.keykomi.com
      secretName: jack-keykomi-com-tls
